feat: update project structure and dependencies
- Renamed project from "enginer-project" to "engine-project" and updated version to 1.0.0 in package.json.
- Removed unused favicon.ico file from public directory.
- Refactored sidebar component:
  - Deleted old sidebar.vue and sidebar-view.vue files.
  - Created new sidebar-layout.vue component for improved structure and maintainability.
- Updated App.vue to use the new sidebar-layout component.
- Added new scripts for serving and deploying the application in package.json.
- Added logo.svg file to public directory.

--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "enginer-project",
-  "version": "0.0.0",
+  "name": "engine-project",
+  "version": "1.0.0",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite --host",
+    "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "serve": "vue-cli-service serve",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "pinia": "^3.0.1",
